--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "redux-devtools-log-monitor": "^1.0.5",
     "redux-form": "^5.0.1",
     "redux-localstorage": "^0.4.0",
-    "redux-thunk": "^1.0.0",
-    "meteor-react-autoform": "^0.0.92"
+    "redux-thunk": "^1.0.0"
   }
 }
