--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "storybook": "start-storybook -p 3001 -s ./public"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0",
     "babel-core": "6.x.x",
     "babel-plugin-react-require": "2.x.x",
     "babel-polyfill": "6.x.x",
@@ -15,19 +14,19 @@
     "babel-preset-stage-2": "6.x.x",
     "babel-root-slash-import": "1.x.x",
     "chai": "3.x.x",
+    "classnames": "^2.2.3",
+    "domready": "^1.0.8",
     "enzyme": "^2.2.0",
     "eslint": "1.10.x",
     "eslint-plugin-react": "3.15.x",
     "jsdom": "^8.0.4",
-    "mocha": "2.x.x",
-    "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.0.0",
-    "sinon": "1.17.x",
-    "domready": "^1.0.8",
-    "classnames": "^2.2.3",
     "lodash": "4.6.1",
+    "meteor-node-stubs": "~0.2.0",
+    "mocha": "2.x.x",
     "moment": "2.11.2",
+    "raw-loader": "^0.5.1",
     "react": "^15.0.0",
+    "react-addons-test-utils": "^15.0.0",
     "react-bootstrap": "0.28.3",
     "react-dom": "^15.0.0",
     "react-mounter": "^1.2.0",
@@ -38,6 +37,7 @@
     "redux-devtools-log-monitor": "^1.0.5",
     "redux-form": "^5.0.1",
     "redux-localstorage": "^0.4.0",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "sinon": "1.17.x"
   }
 }
