Finally have props binding cleanly through the autoform. Used one meteor ReactiveVar. Added an npm package to serialize the forms. Code getting much cleaner.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-form": "^5.0.1",
     "redux-localstorage": "^0.4.0",
     "redux-thunk": "^1.0.0",
-    "sinon": "1.17.x"
+    "sinon": "1.17.x",
+    "form-serialize": "^0.7.1"
   }
 }
