--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "reservations",
+  "browser": "client/main.js",
+  "main": "server/main.js",
   "scripts": {
     "start": "meteor",
     "test": "meteor test --driver-package practicalmeteor:mocha -p 3001",
-    "storybook": "start-storybook -p 3001 -s ./public"
+    "storybook": "start-storybook -p 3001 -s ./public",
+    "browser": "client/main.js"
   },
   "dependencies": {
+    "ag-grid": "^4.0.5",
+    "ag-grid-react": "^4.0.0",
     "babel-core": "6.x.x",
     "babel-plugin-react-require": "2.x.x",
     "babel-polyfill": "6.x.x",
@@ -19,6 +24,7 @@
     "enzyme": "^2.2.0",
     "eslint": "1.10.x",
     "eslint-plugin-react": "3.15.x",
+    "form-serialize": "^0.7.1",
     "jsdom": "^8.0.4",
     "lodash": "4.6.1",
     "meteor-node-stubs": "~0.2.0",
@@ -39,6 +45,31 @@
     "redux-localstorage": "^0.4.0",
     "redux-thunk": "^1.0.0",
     "sinon": "1.17.x",
-    "form-serialize": "^0.7.1"
+    "velocity-animate": "^1.2.3"
+  },
+  "devDependencies": {
+    "webpack": "^1.12.14",
+    "webpack-hot-middleware": "^2.4.1",
+    "url-loader": "^0.5.7",
+    "file-loader": "^0.8.5",
+    "style-loader": "^0.13.0",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "babel": "^6.3.26",
+    "babel-core": "^6.3.26",
+    "babel-loader": "^6.2.0",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-plugin-transform-decorators-legacy": "^1.3.2",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-react-transform": "^2.0.0",
+    "expose-loader": "^0.7.1",
+    "react-transform-hmr": "^1.0.1",
+    "react-transform-catch-errors": "^1.0.0",
+    "redbox-react": "^1.2.0",
+    "less-loader": "^2.2.2",
+    "less": "^2.3.1",
+    "stylus-loader": "^1.5.1"
   }
 }
